--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "bootstrap": "^3.3.7",
+    "google-maps-react": "^1.0.18",
     "jquery": "^2.2.4",
     "lodash": "^3.10.1",
     "react": "^0.14.8",
